# armcrop

./: .gitignore  LICENSE  README.md  pyproject.toml
armcrop/: __init__.py  base_crop.py  crop_volume.py  crop_volume_obb.py  crops.py  detect.py  group.py  model_manager.py  orientation.py  segmentation_transform.py  unalign_obb.py
tests/: __init__.py  evaluate.py  optimize.py  test.ipynb
