[tool.poetry]
name = "armcrop"
version = "0.7.6"
description = "A machine learning model that crops CT scans to a bone of interest in the arm"
authors = ["Gregory Spangenberg <gspangen@westerneng.ca>"]
readme = "README.md"

[tool.poetry.dependencies]
python = ">=3.11"
simpleitk = ">=2.4.0"
numpy = "==2.*"
pandas = ">=2.2.3"
networkx = ">=3.3"
onnxruntime = ">=1.19"
huggingface-hub = ">=0.25.1"
simpleitkutilities = "^0.3.0"
vtk = ">=9.4.0"
opencv-python = ">4"


[tool.poetry.group.dev.dependencies]
black = ">=24.8.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
